refactor(powerline): 统一使用体素预览渲染器并重构风格系统
- 移除 TowerStructuralElevationRenderer 相关代码，统一使用 PoleVoxelizer 进行预览渲染
- 将杆塔设计预览统一为体素立面渲染方式，与落地建造保持一致形态
- 重构 PowerLineFootprint 中的风格相关字段，使用 PowerLineStyleState 替代原有字段
- 移除 spacingCustomized 字段，改为通过 StyleOverrides 中的 preferredSpacing 判断间距自定义状态
- 更新 JSON 序列化逻辑以支持新的风格状态存储结构
- 调整预览表示方式从 STRUCTURAL_FRONT 统一为 VOXEL_FRONT
- 重构 PowerLineStyleEditor 中的间距自定义检测逻辑
- 更新相关测试用例以适应新的间距自定义判断方式